--- a/rails_study/app/views/blog/index.erb
+++ b/rails_study/app/views/blog/index.erb
@@ -7,6 +7,7 @@
     내용 : <%= post.description %>
 </p>
 <a href="/update/<%= post.id %>">수정하기</a>
+<a href="/delete/<%= post.id %>">삭제</a>
 <hr>
 <% end %>
 
