--- a/rails_study/app/views/scaffold_blogs/index.html.erb
+++ b/rails_study/app/views/scaffold_blogs/index.html.erb
@@ -5,20 +5,23 @@
 <table>
   <thead>
     <tr>
-      <th>Title</th>
-      <th>Description</th>
+      <th>ID</th>      
+      <th>Title</th>      
       <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
-    <% @scaffold_blogs.each do |scaffold_blog| %>
+    <% @scaffold_blogs.each_with_index do |scaffold_blog, index| %>
       <tr>
-        <td><%= scaffold_blog.title %></td>
-        <td><%= scaffold_blog.description %></td>
-        <td><%= link_to 'Show', scaffold_blog %></td>
-        <td><%= link_to 'Edit', edit_scaffold_blog_path(scaffold_blog) %></td>
-        <td><%= link_to 'Destroy', scaffold_blog, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>
+          <%= index + 1 %>
+        </td>       
+        <td>
+          <%= link_to(scaffold_blog) do%>
+            <%= scaffold_blog.title %>
+          <% end %>
+        </td>        
       </tr>
     <% end %>
   </tbody>
