--- a/rails_study/app/views/scaffold_blogs/show.html.erb
+++ b/rails_study/app/views/scaffold_blogs/show.html.erb
@@ -13,3 +13,15 @@
 <%= link_to 'Edit', edit_scaffold_blog_path(@scaffold_blog) %> |
 <%= link_to 'Destroy', @scaffold_blog, method: :delete, data: { confirm: 'Are you sure?' } %> |
 <%= link_to 'Back', scaffold_blogs_path %>
+<hr>
+<h3>댓글</h3>
+<% @scaffold_blog.comments.each_with_index do |comment, index| %>
+  <div>
+    <%= index + 1 %>
+    <%= comment.comment %>
+  </div>
+  <hr>
+<% end %>
+
+
+<%= render 'comments/form' %>
