--- a/rails_study/app/views/blog/index.erb
+++ b/rails_study/app/views/blog/index.erb
@@ -1,13 +1,12 @@
 <% @posts.each_with_index do |post, index| %>
-<p>
+<div class="bg-red-500">
     <span><%= index + 1 %></span>
     <a href="/show/<%= post.id %>">
         <%= post.title %>
     </a>    
-</p>
+</div>
 <hr>
 <% end %>
-
 
 <%= form_tag "/post/create", method: :post do %>
     <label for="title">제목</label>
