--- a/rails_study/app/views/articles/index.erb
+++ b/rails_study/app/views/articles/index.erb
@@ -1,1 +1,11 @@
-<h1>Hello, Rails!</h1>
+<h1>Articles</h1>
+
+<ul>
+  <% @articles.each do |article| %>
+    <li>
+        <%= link_to article.title, "/articles/#{article.id}" %>
+    </li>
+  <% end %>
+</ul>
+
+<%= link_to "New Article", articles_new_path %>
