--- a/rails_study/app/views/scaffold_blogs/show.html.erb
+++ b/rails_study/app/views/scaffold_blogs/show.html.erb
@@ -14,15 +14,8 @@
 <%= link_to 'Destroy', @scaffold_blog, method: :delete, data: { confirm: 'Are you sure?' } %> |
 <%= link_to 'Back', scaffold_blogs_path %>
 <hr>
-<h3>댓글</h3>
-<% @scaffold_blog.comments.each_with_index do |comment, index| %>
-  <div>
-    <%= index + 1 %>
-    <%= comment.comment %>
-    <%= link_to 'Destroy', [comment.scaffold_blog, comment], method: :delete, data: { confirm: 'Are you sure?' } %> 
-  </div>
-  <hr>
-<% end %>
+<h2>Comments</h2>
+<%= render @scaffold_blog.comments %>
 
 
 <%= render 'comments/form' %>
