--- a/rutube/app/views/layouts/application.html.erb
+++ b/rutube/app/views/layouts/application.html.erb
@@ -25,6 +25,12 @@
         <% end %>
       </div>
     </nav>
-    <%= yield %>
+    <div class="container-fluid">
+      <div class="card">
+        <div class="card-body">
+          <%= yield %>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
