Uploading images and files using carrierwave

--- a/rutube/app/views/videos/_form.html.erb
+++ b/rutube/app/views/videos/_form.html.erb
@@ -11,27 +11,27 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :title %>
-    <%= form.text_field :title %>
+    <%= form.text_field :title ,class: "form-control"%>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :description %>
-    <%= form.text_area :description %>
+    <%= form.text_area :description ,class: "form-control"%>
   </div>
 
-  <div class="field">
-    <%= form.label :user_id %>
-    <%= form.text_field :user_id %>
+  <div class="form-group">
+    <%= form.label :file %>
+    <%= form.file_field :file ,class: "form-control"%>
   </div>
 
-  <div class="field">
-    <%= form.label :view_count %>
-    <%= form.number_field :view_count %>
+  <div class="form-group">
+    <%= form.label :image %>
+    <%= form.file_field :image ,class: "form-control"%>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit "등록", class: "btn btn-danger" %>
   </div>
 <% end %>
