--- a/rutube/app/views/videos/_video.html.erb
+++ b/rutube/app/views/videos/_video.html.erb
@@ -1,5 +1,6 @@
 <div class="col-3">
     <div class="card">
+        <%= image_tag video.image.url, class: "w-100" if video.image? %>
         <div class="card-body">
             <strong><%= video.title %></strong>
             <%# truncate + length => 글자수 제한, omission => length를 넘었을 때, 보여주고 싶은 문자를 넣을 수 있음 %>
