--- a/rutube/app/views/layouts/application.html.erb
+++ b/rutube/app/views/layouts/application.html.erb
@@ -12,9 +12,9 @@
 
   <body>
     <nav class="navbar mx-2 mb-4 p-2">
-      <a href="" class="navbar-brand">
+      <a href="<%= main_path %>" class="navbar-brand">      
         <%= fa_icon "youtube-play", class: "text-danger" %>
-        RUTUBE
+        <strong>RUTUBE</strong>      
       </a>
       <div>
         <% if user_signed_in? %>
