--- a/rutube/app/views/videos/show.html.erb
+++ b/rutube/app/views/videos/show.html.erb
@@ -6,8 +6,11 @@
 
 <%= simple_format @video.description %>
 
-조회수: <%= @video.view_count.to_i %>
+<p>
+  조회수: <%= @video.view_count.to_i %>
+</p>
 
-<%= link_to '수정', edit_video_path(@video), class: "btn btn-danger" %>
-<%= link_to '삭제', @video, method: :delete, class: "btn btn-outline-danger" %>
- 
+<% if current_user && (current_user == @video.user) %>
+  <%= link_to '수정', edit_video_path(@video), class: "btn btn-danger" %>
+  <%= link_to '삭제', @video, method: :delete, data: {confirm: "정말로 삭제하시겠습니가?"}, class: "btn btn-outline-danger" %>
+<% end %>
