add comments using Ajax and Jquery

--- a/rutube/app/views/videos/show.html.erb
+++ b/rutube/app/views/videos/show.html.erb
@@ -14,3 +14,8 @@
   <%= link_to '수정', edit_video_path(@video), class: "btn btn-danger" %>
   <%= link_to '삭제', @video, method: :delete, data: {confirm: "정말로 삭제하시겠습니가?"}, class: "btn btn-outline-danger" %>
 <% end %>
+
+<div id="comments">
+  <%= render "videos/comments" %>
+</div>
+  
