--- a/rutube/app/views/videos/_comments.html.erb
+++ b/rutube/app/views/videos/_comments.html.erb
@@ -3,6 +3,8 @@
 <% @video.comments.each do |comment| %>
     작성자: <%= comment.user.email %>, <%= time_ago_in_words comment.created_at %>
     <%= simple_format comment.body %>
+    <p><%= link_to "삭제", comment, method: :delete, remote: true, data: {confirm: "정말로 삭제하시겠습니가?"} if current_user && (comment.user == current_user) %></p>
+    <hr>
 <% end %>
 <%= form_for Comment.new, remote: true do |f| %>
     <div class="form-group">
