--- a/video_blog/app/views/videos/show.html.erb
+++ b/video_blog/app/views/videos/show.html.erb
@@ -23,9 +23,22 @@
 <hr>
 
 <% if current_user && (@video.user == current_user) %>
-  <div class="text-center mt-2">
+  <div class="text-center my-2">
     <%= link_to '수정', edit_video_path(@video), class: "btn btn-danger" %>
     <%= link_to '메인', videos_path, class: "btn btn-primary" %>
   </div>
 <% end %>
+<hr>
+<p class="my-2">
+  <strong>댓글</strong>
+  <%= form_with(model: [@video, @video.comments.build]) do |f| %>
+    <div class="form-group mb-2">        
+      <%= f.text_area :body, class: 'form-control' %>
+    </div>
+    <div class="flex flex-row-reverse">
+      <%= f.submit "작성", class: "btn btn-primary" %>
+    </div>    
+  <% end %>
+</p>
 
+<%= render @video.comments %>
