--- a/video_blog/app/views/comments/_comment.html.erb
+++ b/video_blog/app/views/comments/_comment.html.erb
@@ -1,7 +1,15 @@
-<% unless !comment.persisted? %>
+<% if comment.persisted? && !comment.parent_id? %>
     <div class="p-2">
         <p><%= comment.video.user.email %></p>
         <%= comment.body %>
+        <%= link_to 'reply', new_video_comment_path(@video, parent_id: comment.id), remote: true, class: 'd-block' %>
+        </div>
     </div>
     <hr>
+  <% if comment.replies.any? %>
+    <% comment.replies.each do |reply| %> 
+      <%= render partial: 'comments/reply', locals: { reply: reply } %>
+    <% end %>
+  <% end %>
+  <div id="reply-form-<%= comment.id %>"></div>
 <% end %>
