--- a/video_blog/app/views/comments/new.html.erb
+++ b/video_blog/app/views/comments/new.html.erb
@@ -1,5 +1,4 @@
 <h1>New Comment</h1>
 
-<%= render 'form', comment: @comment %>
+<%= render 'reply_form', comment: @comment %>
 
-<%= link_to 'Back', comments_path %>
